<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AAROL</string>

    <string name="action_settings">Settings</string>
    <string name="action_packages">Packages</string>
    <string name="action_about">About</string>

    <string name="compass_low">Compass has low accuracy</string>
    <string name="compass_medium">Compass has medium accuracy</string>
    <string name="compass_high">Compass has high accuracy</string>
    <string name="no_gps">No GPS</string>
    <string name="waiting_for_signals">Waiting for signals</string>
    <string name="cancel_lead_to">Cancel guiding</string>
    <string name="lead_to">Start guiding</string>
    <string name="no_camera">Problem occurred while opening camera</string>
    <string name="loading_package_error">Error occurred while loading one of the enabled packages</string>

    <string name="title_activity_about">About</string>
    <string name="about_aarol">Android Augmented Reality\nObject Labeler</string>
    <string name="about_description">Project for Programming Technologies at Intelligent Decision Support Systems graduate course.</string>
    <string name="about_authors">Authors:\ninż. Konrad Baumgart\ninż. Kalina Jasinska</string>
    <string name="about_license">License: GNU GPLv3</string>

    <string name="title_activity_settings">Settings</string>
    <string name="property_repository_url">Repository\'s URL</string>
    <string name="property_repository_url_summary">Address of repository with packages</string>
    <string name="property_enable_stabilization_summary">Prevents shaking of displayed points</string>
    <string name="property_enable_stabilization">Enable stabilization</string>

    <string name="title_activity_packages">Packages</string>
    <string name="updating_repository">Updating</string>
    <string name="package_download_success">Updated repository</string>
    <string name="package_download_no_connection">No internet connection available</string>
    <string name="package_download_parsing_error">XML parsing error</string>
    <string name="package_download_http_error">HTTP error</string>
    <string name="package_download_format_error">XML format error</string>
    <string name="packege_by">by</string>
    <string name="download_button">download</string>
    <string name="delete_button">delete</string>
    <string name="details_button">details</string>
    <string name="downloading_package">Downloading package</string>
    <string name="download_error">Error occurred</string>
    <string name="color_button">choose color</string>
    <string name="title_dialog_colorpicker">Pick a color</string>
    <string name="colorpicker_ok">OK</string>
    <string name="colorpicker_cancel">Cancel</string>

    <string name="title_activity_package_details">Package details</string>
    <string name="package_details_enabled">Enabled</string>
    <string name="package_details_error">Error occurred while reading the package</string>
</resources>
