<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity"
    tools:ignore="MergeRootFrame">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/about_aarol"
        android:gravity="center"
        android:textSize="26sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/about_description"
        android:gravity="center"
        android:layout_marginTop="15sp"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/about_authors"
        android:gravity="center"
        android:layout_marginTop="15sp"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/about_license"
        android:gravity="center"
        android:layout_marginTop="15sp"/>

</LinearLayout>