<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_packages"
        android:title="@string/action_packages"
        android:orderInCategory="100"
        android:showAsAction="always|withText"
        android:icon="@android:drawable/ic_menu_mapmode" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="200"
        android:showAsAction="always|withText"
        android:icon="@android:drawable/ic_menu_manage" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="300"
        android:showAsAction="always|withText"
        android:icon="@android:drawable/ic_menu_info_details" />
</menu>
