<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_height="wrap_content"
        android:id="@+id/packageNameText"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_gravity="fill" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/enableCheckBox"
        android:onClick="enableClicked" />

    <ImageButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/colorButton"
        android:onClick="colorClicked"
        android:contentDescription="@string/color_button" />

    <ImageButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_agenda"
        android:id="@+id/detailsButton"
        android:onClick="detailsClicked"
        android:contentDescription="@string/details_button" />

    <ImageButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/stat_sys_download_done"
        android:id="@+id/downloadButton"
        android:onClick="downloadClicked"
        android:contentDescription="@string/download_button" />

    <ImageButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_delete"
        android:id="@+id/deleteButton"
        android:onClick="deleteClicked"
        android:contentDescription="@string/delete_button" />
</LinearLayout>